--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,3 +1,4 @@
+# ML service requires Python 3.10, 3.11, or 3.12 (not 3.14 - no scikit-learn wheels)
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
